# piraster

./: .gitignore  bootstrap  configure.ac
src/: Makefile.am  line.cpp  line.h  pixelmethods.cpp  pixelmethods.h  point.cpp  point.h  raster.cpp  raster.h  triangle.h
test/: Makefile.am  test.cpp
